ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/"
  labels:
    name: myingress
spec:
  rules:
  - host: app.test
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: test-react-app
            port: 
              number: 210
  - host: api.test
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: express-api
            port: 
              number: 3000
